# ThorVG-GameMaker

./: README.md  ThorVG-GameMaker.yyp
ThorVG-GM/: .gitignore  meson.build
ThorVG-GM/src/: api.cpp
ThorVG-GM/subprojects/: thorvg.wrap
extensions/ThorVG/: ThorVG.yy  libthorvg-gm.dylib
objects/oLottiePlayer/: Create_0.gml  Draw_0.gml  Step_0.gml  oLottiePlayer.yy
options/android/: options_android.yy
options/html5/: options_html5.yy
options/ios/: options_ios.yy
options/linux/: options_linux.yy
options/mac/: options_mac.yy
options/main/: options_main.yy
options/tvos/: options_tvos.yy
options/windows/: options_windows.yy
rooms/rPlayground/: rPlayground.yy
scripts/TvgSprite/: TvgSprite.gml  TvgSprite.yy
sprites/sStar/: sStar.yy
